Resume_Builder.ipynb

--- a/Resume_Builder.ipynb
+++ b/Resume_Builder.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "# Assuming you have a label column named 'label'\n",
     "X = train_file['processed_text']\n",
-    "y = train_file['label']  # Replace 'label' with your actual label column name\n",
+    "y = train_file['Certifications']  
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
